# sonoscope

./: Cargo.toml  README.md  Trunk.toml  index.html
.github/workflows/: deploy.yml
src/: audio.rs  gui.rs  main.rs  phone.html  pitch.rs  remote.rs  tuning.rs
src/dsp/: align.rs  chroma.rs  cqt.rs  filter.rs  mod.rs  peaks.rs  separate.rs  vibrato.rs  visibility.rs
src/gui/: analysis.rs  draw.rs  mod.rs  scope.rs  spectrogram.rs  spectrum.rs  tuner.rs
