[package]
name = "flamenco-tuner"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.32"
rustfft = "6"
# std::time::Instant panics on wasm; web-time is a drop-in that maps to
# performance.now() there and re-exports std on native.
web-time = "1"

# Native only: audio capture and the phone-mic HTTPS/WebSocket service.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cpal = "0.15"
qrcode = "0.14"
axum = { version = "0.8", features = ["ws"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
tokio = { version = "1", features = ["rt", "macros", "net", "time"] }
rcgen = "0.13"

# Web build: mic capture goes through Web Audio instead of cpal.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Navigator",
    "MediaDevices",
    "MediaStream",
    "MediaStreamConstraints",
    "MediaStreamAudioSourceNode",
    "AudioContext",
    "AudioContextState",
    "BaseAudioContext",
    "AudioWorklet",
    "AudioWorkletNode",
    "AudioNode",
    "AudioParam",
    "AudioBuffer",
    "AudioBufferSourceNode",
    "AudioDestinationNode",
    "GainNode",
    "MessageEvent",
    "MessagePort",
    "Blob",
    "BlobPropertyBag",
    "Url",
    "HtmlCanvasElement",
    "console",
] }

[profile.release]
opt-level = 3
